--- a/Project 2.ipynb
+++ b/Project 2.ipynb
@@ -420,7 +420,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "DateTime reffers to the date of the outcome. It would be great if we could also have the date when animal entered the shelter. If we had this information we could investigate the inpact of the time the animal was in shelter on outcome. We also see that some columns like SexuponOutcome and Breed store a lot of information - we'll take care of it later."
+    "DateTime reffers to the date of outcome. It would be great if we could also have the date when animal entered the shelter. If we had this information we could investigate the inpact of the time the animal was in shelter on outcome. We also see that some columns like SexuponOutcome and Breed store a lot of information - we'll take care of it later."
    ]
   },
   {
@@ -466,7 +466,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "There are more dogs than cats in the shelter. Because their number is different, in our later investigation we'll either show nomalized values or we'll separate cats and dogs in the questions we'll ask, so the numerical difference will not be a factor."
+    "There are more dogs than cats in the shelter. Because their number is different, in our later investigation we'll either show normalized values or we'll separate cats and dogs in the questions we'll ask, so the numerical difference will not be a factor."
    ]
   },
   {
