--- a/Project 2.ipynb
+++ b/Project 2.ipynb
@@ -778,7 +778,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "As expected, we can clearly see that as an animal gets older it has less chances to be adopted or transferred. The trend is exactlt the opposite regarding \"return to owner\" outcome: older animals are returned to owners more often than younger ones - probably bacause owners that had an animal for a long time regret and take it back. Let's see if the influence of age differs between cats and dogs:"
+    "As expected, we can clearly see that as an animal gets older it has less chances to be adopted or transferred. The trend is exactly the opposite regarding \"return to owner\" outcome: older animals are returned to owners more often than younger ones - probably because owners that had an animal for a long time regret and take it back. Let's see if the influence of age differs between cats and dogs:"
    ]
   },
   {
@@ -973,7 +973,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We see that only if an outcome subtype is 'Barn' then there might be more than 1 outcome (either transfer or adoption). That's wht if we know animal's OutcomeSubtype, we'll know it's outcome in most of the cases."
+    "We see that only if an outcome subtype is 'Barn' then there might be more than 1 outcome (either transfer or adoption). That's why if we know animal's OutcomeSubtype, we'll know the outcome in most of the cases."
    ]
   },
   {
@@ -1167,7 +1167,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Interesting that most of the animals without names are being transferred, while most of the animals with names are being adopted. Maybe when a potential owner sees animal's name he gets personally attached to it and it's easier for him to decide to adopt it. Also, animals without names are almost never being returned to their owners - well, this makes sense cause if an animal had owner most likely it also had a name."
+    "Interesting that most of the animals without names are being transferred, while most of the animals with names are being adopted. Maybe when a potential owner sees animal's name he gets personally attached to it and it's easier for him to decide to adopt it. Also, animals without names are almost never returned to their owners - well, this makes sense cause if an animal had owner most likely it also had a name."
    ]
   },
   {
@@ -1440,7 +1440,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We can see that as years pass by adoption and return to owner tendency grow, while transfer and euthanasia tendency are decreasing."
+    "We can see that as years pass by adoption and return to owner tendency are growing, while transfer and euthanasia tendency are decreasing."
    ]
   },
   {
@@ -1527,7 +1527,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "It's a bit hard to see trends in the above chart, though we can already tell that in summer animals are being transferred more and less returned to owners. Adoption happens more during winter and summer - probably people have more free time during Christmas and summer holidays. Let's see more close how each outcome distrubutes through months:"
+    "It's a bit hard to see trends in the above chart, though we can already tell that in summer animals are being transferred more and less returned to owners. Adoption happens more during winter and summer - probably people have more free time during Christmas and summer holidays. Let's have a closer look how each outcome distrubutes through months:"
    ]
   },
   {
@@ -1816,7 +1816,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "From the investigation above we found some features and their possible influence on outcome. There are still a few features we might need to investigate more: for example, we found no influence of animal color on outcome. But maybe our initial assumption of primary and secondary color was wrong and we need to categorize this column in a different way (there is breeds dictionary wikipedia). We also saw there were plenty of bread types in the dataset. We categorized it only as mixed or non-mixed type but probably more precise categorization will be needed. Regarding the results - it was much easier to see how different features influence on adoption, return to owner and transfer outcomes. Died and euthanasia outcomes didn't change much through all our questions, so it will be probably a bit harder to predict these outcomes."
+    "From the investigation above we found some features and their possible influence on outcome. There are still a few features we might need to investigate more: for example, we found no influence of animal color on outcome. But maybe our initial assumption of primary and secondary color was wrong and we need to categorize this column in a different way. We also saw there were plenty of bread types in the dataset. We categorized it only as mixed or non-mixed type but probably more precise categorization will be needed (there is breeds dictionary wikipedia). Regarding the results - it was much easier to see how different features influence on adoption, return to owner and transfer outcomes. Died and euthanasia outcomes didn't change much through all our questions, so it will be probably a bit harder to predict these outcomes."
    ]
   },
   {
